# nexm

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: _market.py.patch
nexm/: _db.py  _defaults.py  _market.py
tests/: bot_test.py  test_market.py  test_nexm.py
