[tool.poetry]
name = "nexm"
version = "0.0.1"
description = ""
authors = ["hoopengo <hoopengo@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-commas = "^2.1.0"
flake8-bugbear = "^22.7.1"
flake8-polyfill = "^1.0.2"
isort = "^5.10.1"
mypy-extensions = "^0.4.3"
pep8-naming = "^0.13.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | mongo-data
  | _build
  | buck-out
  | build
  | dist
)/
'''